--- a/common/lib/xmodule/xmodule/js/fixtures/video.html
+++ b/common/lib/xmodule/xmodule/js/fixtures/video.html
@@ -66,8 +66,18 @@
 
           <ol class="subtitles"><li></li></ol>
         </div>
-
         <div class="focus_grabber last"></div>
+        <ul class="wrapper-downloads">
+          <li class="video-sources video-download-button">
+              <a href="#">Download video</a>
+          </li>
+          <li class="video-tracks video-download-button">
+            <a href="#" class="external-track">Download transcript</a>
+          </li>
+          <li class="video-handout video-download-button">
+            <a href="#" target="_blank">Download Handout</a>
+          </li>
+        </ul>
       </div>
     </div>
   </div>
