--- a/common/lib/xmodule/xmodule/js/fixtures/video_all.html
+++ b/common/lib/xmodule/xmodule/js/fixtures/video_all.html
@@ -73,6 +73,9 @@
         <div class="focus_grabber last"></div>
 
         <ul class="wrapper-downloads">
+          <li class="video-sources video-download-button">
+            <a href="#">Download video</a>
+          </li>
           <li class="video-tracks">
             <div class="a11y-menu-container">
                 <a class="a11y-menu-button" href="#" title=".srt">.srt</a>
@@ -86,8 +89,10 @@
                 </ol>
             </div>
           </li>
+          <li class="video-handout video-download-button">
+            <a href="#" target="_blank">Download Handout</a>
+          </li>
         </ul>
-
       </div>
     </div>
   </div>
