--- a/common/lib/xmodule/xmodule/js/fixtures/video_html5.html
+++ b/common/lib/xmodule/xmodule/js/fixtures/video_html5.html
@@ -26,7 +26,6 @@
         data-autohide-html5="True"
       >
         <div class="focus_grabber first"></div>
-
         <div class="tc-wrapper">
           <article class="video-wrapper">
             <span tabindex="0" class="spinner" aria-hidden="false" aria-label="${_('Loading video player')}"></span>
@@ -36,11 +35,20 @@
             </section>
             <section class="video-controls is-hidden"></section>
           </article>
-
           <ol class="subtitles"><li></li></ol>
         </div>
-
         <div class="focus_grabber last"></div>
+        <ul class="wrapper-downloads">
+          <li class="video-sources video-download-button">
+              <a href="#">Download video</a>
+          </li>
+          <li class="video-tracks video-download-button">
+            <a href="#" class="external-track">Download transcript</a>
+          </li>
+          <li class="video-handout video-download-button">
+            <a href="#" target="_blank">Download Handout</a>
+          </li>
+        </ul>
       </div>
     </div>
   </div>
